Removed appCache, "is a douchebag" Added Chart in Details page Changed fetching url for pictures from pokeapi.co to nicier ones from official pokemon.com Changed site logo and favicon

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html, body {
   font-weight: 300;
   letter-spacing: 0.04em;
   color: #546E7A; /* blueGrey600 */
-  background: #EFEFEF;
+  background: #EEEEEE; /* grey200 */
 }
 
 /* makes footer always at bottom of page without being stickied */
