--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@ html, body {
   background: #EEEEEE; /* grey200 */
 }
 
+/* CSS resets */
+* { box-sizing: border-box; }
+
 /* makes footer always at bottom of page without being stickied */
 /* don't forget to add 'flex:1' on the content container (App.js) */
 /*noinspection CssUnusedSymbol*/
@@ -23,4 +26,7 @@ html, body, #root { height: 100%; }
   flex-direction: column;
 }
 
-*:focus { outline: none; }
+.pokemon:hover {
+  transform: translate3d(0,-3px,0);
+  box-shadow: 0 8px 16px rgba(0,0,0,0.4) !important;
+}
